# Jihye

./: .breakpoints  .gitignore  .replit  Dockerfile  Dockerfile.dev  README.md  README_DEV.md  docker-compose.dev.yml  docker-compose.yml  env.yml  launcher.py  project.sublime-project  project.sublime-workspace  pyproject.toml  reqs.txt  requirements.txt  untitled.sublime-workspace
.github/workflows/: ci.yml
bot/: __init__.py  bot.py  context.py  exceptions.py  help.py
bot/cache/: __init__.py  abc.py  entry.py  timed.py
bot/cogs/: autoresponders.py  errors.py  fun.py  reactions.py  settings.py  todolist.py
bot/db/: __init__.py  mongo.py  reactions.py  settings.py  todolist.py
bot/db/managers/: __init__.py  autoresponders.py  embeds.py  reactionroles.py  settings.py  todolist.py
bot/paginators/: __init__.py  disnake_paginator.py  pycord_paginator.py
bot/wrappers/: SPAPI.py
