[tool.poetry]
name = "repl_nix_Jihye"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
attr = "^0.3.2"
humanize = "^4.3.0"
motor = "^3.0.0"
pymongo = "^4.2.0"
python-dotenv = "^0.20.0"
uvloop = "^0.16.0"
aiohttp = "^3.8.1"
colorthief = "^0.2.1"
fast-colorthief = "^0.0.4"
colors-accessibility = "^0.0.5"
wcag-contrast-ratio = "^0.9"
easy-pil = "^0.1.9"
arrow = "^1.2.3"
nest-asyncio = "^1.5.5"

[tool.poetry.dev-dependencies]
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
